--- a/contact.html
+++ b/contact.html
@@ -586,5 +586,7 @@
   };
 </script>
   <script src="responsive.js"></script>
+  <script type="module" src="src/main.js"></script>
+
 </body>
 </html>
