--- a/products.html
+++ b/products.html
@@ -954,5 +954,7 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 </script>
 \n  <script src="responsive.js"></script>
+<script type="module" src="src/main.js"></script>
+
 </body>
 </html>
