--- a/vegam-exterior-emulsion.html
+++ b/vegam-exterior-emulsion.html
@@ -291,5 +291,7 @@
   });
 </script>
 \n  <script src="responsive.js"></script>
+<script type="module" src="src/main.js"></script>
+
 </body>
 </html>
