--- a/vegam-texture-rustic.html
+++ b/vegam-texture-rustic.html
@@ -280,5 +280,7 @@
   });
 </script>
 \n  <script src="responsive.js"></script>
+<script type="module" src="src/main.js"></script>
+
 </body>
 </html>
