--- a/about.html
+++ b/about.html
@@ -192,8 +192,7 @@
   </ul>
   <a href="contact.html" class="nav-cta">Get a Quote</a>
 
-  <button class="hamburger" id="mobile-menu-btn" style="display: none; background: none; border: none; cursor: pointer;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+<button class="hamburger" id="mobile-menu-btn">    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
   </button>
 </nav>
 
@@ -436,6 +435,6 @@
   });
 </script>
 \n  <script src="responsive.js"></script>
-<script type="module" src="./main.js"></script>
+<script type="module" src="src/main.js"></script>
 </body>
 </html>
