--- a/cycle-interior-primer.html
+++ b/cycle-interior-primer.html
@@ -14,6 +14,7 @@
 </style>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
+    // Scroll Animations
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
@@ -26,9 +27,27 @@
         el.classList.add('animate-on-scroll');
         observer.observe(el);
     });
+
+    // Mobile Navigation Toggle
+    const navLinks = document.querySelector('.nav-links');
+    const mobileToggle = document.createElement('div');
+    mobileToggle.className = 'mobile-toggle';
+    mobileToggle.innerHTML = '<span></span><span></span><span></span>';
+    const nav = document.querySelector('nav');
+    if (nav) nav.appendChild(mobileToggle);
+
+    mobileToggle.addEventListener('click', () => {
+      navLinks.classList.toggle('mobile-open');
+    });
+
+    // Close mobile menu when a link is clicked
+    document.querySelectorAll('.nav-links a').forEach(link => {
+      link.addEventListener('click', () => {
+        navLinks.classList.remove('mobile-open');
+      });
+    });
   });
 </script>
-  <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
 
@@ -44,15 +63,20 @@
     <li><a href="products.html" class="active">Products</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <a href="contact.html" class="nav-cta">Get a Quote</a>
-
-  <button class="hamburger" id="mobile-menu-btn" style="display: none; background: none; border: none; cursor: pointer;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
-  </button>
+  <div><a href="contact.html" class="nav-cta">Get a Quote</a></div>
 </nav>
 
 
-
+<!-- BREADCRUMB -->
+<div class="breadcrumb">
+  <a href="index.html">Home</a>
+  <span class="breadcrumb-sep">›</span>
+  <a href="products.html">Products</a>
+  <span class="breadcrumb-sep">›</span>
+  <a href="products.html">Primers</a>
+  <span class="breadcrumb-sep">›</span>
+  <span class="breadcrumb-current">Cycle Interior Primer</span>
+</div>
 
 <!-- PRODUCT HERO -->
 <section class="product-hero cycle-product">
@@ -270,8 +294,7 @@
     }
   });
 </script>
-\n  <script src="responsive.js"></script>
-<script type="module" src="src/main.js"></script>
-
-</body>
+\n</body>
 </html>
+
+
