fixed the nav bar error in products HTML

--- a/vegam-ceiling-white.html
+++ b/vegam-ceiling-white.html
@@ -167,7 +167,7 @@
     <div class="tab-grid">
       <div>
         <h2 class="tab-section-title">Technical Specifications</h2>
-        <table class="specs-table"><tr><td>Base</td><td>Acrylic emulsion, water-based</td></tr><tr><td>Finish</td><td>Flat matte</td></tr><tr><td>Reflectance</td><td>≥ 88% (white base)</td></tr><tr><td>VOC Level</td><td>Low VOC — < 20 g/L</td></tr><tr><td>Drying Time</td><td>Touch dry: 1 hr | Recoat: 3–4 hrs</td></tr><tr><td>Coverage</td><td>140–160 sq ft per litre per coat</td></tr><tr><td>Coats Required</td><td>Minimum 2 coats</td></tr><tr><td>Anti-drip</td><td>Yes — specially formulated</td></tr><tr><td>Pack Sizes</td><td>4L, 10L, 20L</td></tr><tr><td>Tintable</td><td>Yes — light tints available</td></tr></table>
+        <table class="specs-table"><tr><td>Base</td><td>Acrylic emulsion, water-based</td></tr><tr><td>Finish</td><td>Flat matte</td></tr><tr><td>Reflectance</td><td>≥ 88% (white base)</td></tr><tr><td>VOC Level</td><td>Low VOC — 20 g/L</td></tr><tr><td>Drying Time</td><td>Touch dry: 1 hr | Recoat: 3–4 hrs</td></tr><tr><td>Coverage</td><td>140–160 sq ft per litre per coat</td></tr><tr><td>Coats Required</td><td>Minimum 2 coats</td></tr><tr><td>Anti-drip</td><td>Yes — specially formulated</td></tr><tr><td>Pack Sizes</td><td>4L, 10L, 20L</td></tr><tr><td>Tintable</td><td>Yes — light tints available</td></tr></table>
       </div>
       <div>
         <h2 class="tab-section-title">System Coverage</h2>
