--- a/vegam-dampproof.html
+++ b/vegam-dampproof.html
@@ -156,7 +156,7 @@
     <div class="tab-grid">
       <div>
         <h2 class="tab-section-title">Technical Specifications</h2>
-        <table class="specs-table"><tr><td>Base</td><td>Rubber-modified latex, water-based</td></tr><tr><td>Finish</td><td>Flat</td></tr><tr><td>VOC Level</td><td>Low VOC</td></tr><tr><td>Drying Time</td><td>Touch dry: 2 hrs | Recoat: 24 hrs</td></tr><tr><td>Coverage</td><td>80–100 sq ft per litre per coat</td></tr><tr><td>Coats Required</td><td>1–2 coats on affected areas</td></tr><tr><td>Dilution</td><td>Do not dilute</td></tr><tr><td>Pack Sizes</td><td>4L, 10L</td></tr><tr><td>Flexibility</td><td>Bridges hairline cracks</td></tr><tr><td>Application</td><td>Brush or stiff bristle brush</td></tr></table>
+        <table class="specs-table"><tr><td>Base</td><td>Rubber-modified latex, water-based</td></tr><tr><td>Finish</td><td>Flat</td></tr><tr><td>VOC Level</td><td>Low VOC</td></tr><tr><td>Drying Time</td><td>Touch dry: 2 hrs | Recoat: 24 hrs</td></tr><tr><td>Coverage</td><td>80 to 100 sq ft per litre per coat</td></tr><tr><td>Coats Required</td><td>1 to 2 coats on affected areas</td></tr><tr><td>Dilution</td><td>Do not dilute</td></tr><tr><td>Pack Sizes</td><td>4L, 10L</td></tr><tr><td>Flexibility</td><td>Bridges hairline cracks</td></tr><tr><td>Application</td><td>Brush or stiff bristle brush</td></tr></table>
       </div>
       <div>
         <h2 class="tab-section-title">System Coverage</h2>
