--- a/vegam-exterior-emulsion.html
+++ b/vegam-exterior-emulsion.html
@@ -167,7 +167,7 @@
     <div class="tab-grid">
       <div>
         <h2 class="tab-section-title">Technical Specifications</h2>
-        <table class="specs-table"><tr><td>Base</td><td>Elastomeric acrylic, water-based</td></tr><tr><td>Finish</td><td>Low sheen / satin</td></tr><tr><td>VOC Level</td><td>Low VOC — < 50 g/L</td></tr><tr><td>Drying Time</td><td>Touch dry: 2 hrs | Recoat: 6–8 hrs</td></tr><tr><td>Coverage</td><td>110–130 sq ft per litre per coat</td></tr><tr><td>Coats Required</td><td>Minimum 2 coats</td></tr><tr><td>Dilution</td><td>Up to 5% water for brush/roller, up to 15% spray</td></tr><tr><td>Pack Sizes</td><td>4L, 10L, 20L</td></tr><tr><td>Elasticity</td><td>Bridges micro-cracks up to 0.3mm</td></tr><tr><td>System Warranty</td><td>8 years when full system applied</td></tr></table>
+        <table class="specs-table"><tr><td>Base</td><td>Elastomeric acrylic, water-based</td></tr><tr><td>Finish</td><td>Low sheen / satin</td></tr><tr><td>VOC Level</td><td>Low VOC — 50 g/L</td></tr><tr><td>Drying Time</td><td>Touch dry: 2 hrs | Recoat: 6–8 hrs</td></tr><tr><td>Coverage</td><td>110–130 sq ft per litre per coat</td></tr><tr><td>Coats Required</td><td>Minimum 2 coats</td></tr><tr><td>Dilution</td><td>Up to 5% water for brush/roller, up to 15% spray</td></tr><tr><td>Pack Sizes</td><td>4L, 10L, 20L</td></tr><tr><td>Elasticity</td><td>Bridges micro-cracks up to 0.3mm</td></tr><tr><td>System Warranty</td><td>8 years when full system applied</td></tr></table>
       </div>
       <div>
         <h2 class="tab-section-title">System Coverage</h2>
