--- a/vegam-interior-emulsion.html
+++ b/vegam-interior-emulsion.html
@@ -235,15 +235,15 @@
             </tr>
             <tr>
               <td>VOC Level</td>
-              <td>Low VOC — < 30 g/L</td>
+              <td>Low VOC —  30 g/L</td>
             </tr>
             <tr>
               <td>Drying Time</td>
-              <td>Touch dry: 1–2 hrs | Recoat: 4–6 hrs</td>
+              <td>Touch dry: 1 to 2 hrs | Recoat: 4 to 6 hrs</td>
             </tr>
             <tr>
               <td>Coverage</td>
-              <td>120–140 sq ft per litre per coat</td>
+              <td>120 to 140 sq ft per litre per coat</td>
             </tr>
             <tr>
               <td>Coats Required</td>
