--- a/vegam-texture-rustic.html
+++ b/vegam-texture-rustic.html
@@ -156,7 +156,7 @@
     <div class="tab-grid">
       <div>
         <h2 class="tab-section-title">Technical Specifications</h2>
-        <table class="specs-table"><tr><td>Base</td><td>Polymer-modified acrylic</td></tr><tr><td>Texture</td><td>Coarse — 2.0mm aggregate</td></tr><tr><td>Finish</td><td>Matte / natural</td></tr><tr><td>VOC Level</td><td>Low VOC — < 40 g/L</td></tr><tr><td>Drying Time</td><td>Touch dry: 4 hrs | Full cure: 24 hrs</td></tr><tr><td>Coverage</td><td>4–5 sq ft per kg per coat</td></tr><tr><td>Coats Required</td><td>1–2 coats</td></tr><tr><td>Dilution</td><td>Do not dilute</td></tr><tr><td>Pack Sizes</td><td>5kg, 15kg, 30kg</td></tr><tr><td>Trowel / Tool</td><td>Plastic float or textured roller</td></tr></table>
+        <table class="specs-table"><tr><td>Base</td><td>Polymer-modified acrylic</td></tr><tr><td>Texture</td><td>Coarse — 2.0mm aggregate</td></tr><tr><td>Finish</td><td>Matte / natural</td></tr><tr><td>VOC Level</td><td>Low VOC — 40 g/L</td></tr><tr><td>Drying Time</td><td>Touch dry: 4 hrs | Full cure: 24 hrs</td></tr><tr><td>Coverage</td><td>4 to 5 sq ft per kg per coat</td></tr><tr><td>Coats Required</td><td>1 to 2 coats</td></tr><tr><td>Dilution</td><td>Do not dilute</td></tr><tr><td>Pack Sizes</td><td>5kg, 15kg, 30kg</td></tr><tr><td>Trowel / Tool</td><td>Plastic float or textured roller</td></tr></table>
       </div>
       <div>
         <h2 class="tab-section-title">System Coverage</h2>
