--- a/products.html
+++ b/products.html
@@ -1129,6 +1129,7 @@
                 <span class="card-image-label"><img src="/images/interior_hero_3.jpg" alt="Interior Emulsion"
                     style="width:100%;height:100%;object-fit:cover;"></span>
               </div>
+              <br/>
               <div class="card-swatches">
                 <div class="swatch" style="background:#C1623F"></div>
                 <div class="swatch" style="background:#D4845A"></div>
@@ -1160,6 +1161,7 @@
                 <span class="card-image-label"><img src="/images/exterior_1.jpg" alt="Exterior Emulsion"
                     style="width:100%;height:100%;object-fit:cover;"></span>
               </div>
+              <br/>
               <div class="card-swatches">
                 <div class="swatch" style="background:#4A7C59"></div>
                 <div class="swatch" style="background:#6A9E7A"></div>
@@ -1191,6 +1193,7 @@
                 <span class="card-image-label"><img src="/images/interior_hero_1.jpg" alt="Ceiling White"
                     style="width:100%;height:100%;object-fit:cover;"></span>
               </div>
+              <br/>
               <div class="card-swatches">
                 <div class="swatch" style="background:#FAFAFA"></div>
                 <div class="swatch" style="background:#F5ECD7"></div>
@@ -1226,7 +1229,7 @@
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/primer_1.jpg" alt="Interior Primer"
                     style="width:100%;height:100%;object-fit:cover;"></span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="vegam-interior-primer.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Vegam Interior Primer</a></h3>
@@ -1249,7 +1252,7 @@
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/primer_2.jpg" alt="Exterior Primer"
                     style="width:100%;height:100%;object-fit:cover;"></span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="vegam-exterior-primer.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Vegam Exterior Primer</a></h3>
@@ -1273,7 +1276,7 @@
                 <img src="/images/interior_hero_1.jpg" alt="Product"
                   style="width:100%;height:100%;object-fit:cover; position:absolute; top:0; left:0; z-index:0;"> <span
                   style="display:none" class="card-image-label">[ Dampproof Primer<br>Product Image ]</span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="vegam-dampproof.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Vegam Dampproof</a></h3>
@@ -1303,7 +1306,7 @@
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/texture_2.jpg" alt="Texture Rustic"
                     style="width:100%;height:100%;object-fit:cover;"></span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="vegam-texture-rustic.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Vegam Texture Rustic</a></h3>
@@ -1326,7 +1329,7 @@
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/texture_1.jpg" alt="Texture Fine"
                     style="width:100%;height:100%;object-fit:cover;"></span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="vegam-texture-fine.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Vegam Texture Fine</a></h3>
@@ -1349,7 +1352,7 @@
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/primer_1.jpg" alt="Wallcare Putty"
                     style="width:100%;height:100%;object-fit:cover;"></span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="vegam-wallcare-putty.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Wallcare Putty Powder</a></h3>
@@ -1380,7 +1383,7 @@
                 <img src="/images/interior_hero_1.jpg" alt="Product"
                   style="width:100%;height:100%;object-fit:cover; position:absolute; top:0; left:0; z-index:0;"> <span
                   style="display:none" class="card-image-label">[ Vegam Enamel<br>Launching Soon ]</span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="vegam-enamel.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Vegam Enamel Paints</a></h3>
@@ -1459,7 +1462,7 @@
                 <img src="/images/interior_hero_1.jpg" alt="Product"
                   style="width:100%;height:100%;object-fit:cover; position:absolute; top:0; left:0; z-index:0;"> <span
                   style="display:none" class="card-image-label">[ Distemper<br>Product Image ]</span>
-              </div>
+              </div> <br/>
               <div class="card-swatches">
                 <div class="swatch" style="background:#FAFAFA"></div>
                 <div class="swatch" style="background:#F0E8D5"></div>
@@ -1488,7 +1491,7 @@
                 <span class="card-brand-chip chip-cycle">Cycle</span>
                 <span class="card-image-label"><img src="/images/interior_hero_3.jpg" alt="Interior Emulsion"
                     style="width:100%;height:100%;object-fit:cover;"></span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="cycle-interior-emulsion.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Cycle Interior Emulsion</a></h3>
@@ -1510,7 +1513,7 @@
                 <span class="card-brand-chip chip-cycle">Cycle</span>
                 <span class="card-image-label"><img src="/images/exterior_1.jpg" alt="Exterior Emulsion"
                     style="width:100%;height:100%;object-fit:cover;"></span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="cycle-exterior-emulsion.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Cycle Exterior Emulsion</a></h3>
@@ -1538,7 +1541,7 @@
                 <span class="card-brand-chip chip-cycle">Cycle</span>
                 <span class="card-image-label"><img src="/images/primer_1.jpg" alt="Interior Primer"
                     style="width:100%;height:100%;object-fit:cover;"></span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="cycle-interior-primer.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Cycle Interior Primer</a></h3>
@@ -1557,7 +1560,7 @@
                 <span class="card-brand-chip chip-cycle">Cycle</span>
                 <span class="card-image-label"><img src="/images/primer_2.jpg" alt="Exterior Primer"
                     style="width:100%;height:100%;object-fit:cover;"></span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="cycle-exterior-primer.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Cycle Exterior Primer</a></h3>
@@ -1577,7 +1580,7 @@
                 <img src="/images/interior_hero_1.jpg" alt="Product"
                   style="width:100%;height:100%;object-fit:cover; position:absolute; top:0; left:0; z-index:0;"> <span
                   style="display:none" class="card-image-label">[ Multi Primer<br>Product Image ]</span>
-              </div>
+              </div><br/>
               <div class="card-body">
                 <h3 class="card-name"><a href="cycle-multi-primer.html"
                     style="color:inherit;text-decoration:none;cursor:pointer">Cycle Multi Primer</a></h3>
