--- a/products.html
+++ b/products.html
@@ -1124,6 +1124,7 @@
             <!-- Interior Emulsion -->
             <div class="product-card">
               <div class="card-top-bar bar-terracotta"></div>
+                <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/interior_hero_3.jpg" alt="Interior Emulsion"
@@ -1155,7 +1156,7 @@
             </div>
             <!-- Exterior Emulsion -->
             <div class="product-card">
-              <div class="card-top-bar bar-sage"></div>
+              <div class="card-top-bar bar-sage"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/exterior_1.jpg" alt="Exterior Emulsion"
@@ -1187,7 +1188,7 @@
             </div>
             <!-- Ceiling White -->
             <div class="product-card">
-              <div class="card-top-bar bar-cream"></div>
+              <div class="card-top-bar bar-cream"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/interior_hero_1.jpg" alt="Ceiling White"
@@ -1224,7 +1225,7 @@
           <h2 class="product-section-title section-bar-sage">Primers</h2>
           <div class="product-grid">
             <div class="product-card">
-              <div class="card-top-bar bar-terracotta"></div>
+              <div class="card-top-bar bar-terracotta"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/primer_1.jpg" alt="Interior Primer"
@@ -1247,7 +1248,7 @@
               </div>
             </div>
             <div class="product-card">
-              <div class="card-top-bar bar-sage"></div>
+              <div class="card-top-bar bar-sage"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/primer_2.jpg" alt="Exterior Primer"
@@ -1270,7 +1271,7 @@
               </div>
             </div>
             <div class="product-card">
-              <div class="card-top-bar bar-slate"></div>
+              <div class="card-top-bar bar-slate"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <img src="/images/interior_hero_1.jpg" alt="Product"
@@ -1301,7 +1302,7 @@
           <h2 class="product-section-title section-bar-slate">Wallcare & Textured Finishes</h2>
           <div class="product-grid">
             <div class="product-card">
-              <div class="card-top-bar bar-terracotta"></div>
+              <div class="card-top-bar bar-terracotta"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/texture_2.jpg" alt="Texture Rustic"
@@ -1324,7 +1325,7 @@
               </div>
             </div>
             <div class="product-card">
-              <div class="card-top-bar bar-sage"></div>
+              <div class="card-top-bar bar-sage"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/texture_1.jpg" alt="Texture Fine"
@@ -1347,7 +1348,7 @@
               </div>
             </div>
             <div class="product-card">
-              <div class="card-top-bar bar-cream"></div>
+              <div class="card-top-bar bar-cream"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-image-label"><img src="/images/primer_1.jpg" alt="Wallcare Putty"
@@ -1376,7 +1377,7 @@
           <h2 class="product-section-title section-bar-terracotta">Enamels</h2>
           <div class="product-grid">
             <div class="product-card">
-              <div class="card-top-bar bar-terracotta"></div>
+              <div class="card-top-bar bar-terracotta"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-vegam">Vegam</span>
                 <span class="card-coming-soon">Coming Soon</span>
@@ -1456,7 +1457,7 @@
           <h2 class="product-section-title section-bar-sage">Distempers & Emulsions</h2>
           <div class="product-grid">
             <div class="product-card">
-              <div class="card-top-bar bar-sage"></div>
+              <div class="card-top-bar bar-sage"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-cycle">Cycle</span>
                 <img src="/images/interior_hero_1.jpg" alt="Product"
@@ -1486,7 +1487,7 @@
               </div>
             </div>
             <div class="product-card">
-              <div class="card-top-bar bar-sage"></div>
+              <div class="card-top-bar bar-sage"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-cycle">Cycle</span>
                 <span class="card-image-label"><img src="/images/interior_hero_3.jpg" alt="Interior Emulsion"
@@ -1508,7 +1509,7 @@
               </div>
             </div>
             <div class="product-card">
-              <div class="card-top-bar bar-sage"></div>
+              <div class="card-top-bar bar-sage"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-cycle">Cycle</span>
                 <span class="card-image-label"><img src="/images/exterior_1.jpg" alt="Exterior Emulsion"
@@ -1536,7 +1537,7 @@
           <h2 class="product-section-title section-bar-terracotta">Primers</h2>
           <div class="product-grid">
             <div class="product-card">
-              <div class="card-top-bar bar-sage"></div>
+              <div class="card-top-bar bar-sage"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-cycle">Cycle</span>
                 <span class="card-image-label"><img src="/images/primer_1.jpg" alt="Interior Primer"
@@ -1555,7 +1556,7 @@
               </div>
             </div>
             <div class="product-card">
-              <div class="card-top-bar bar-sage"></div>
+              <div class="card-top-bar bar-sage"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-cycle">Cycle</span>
                 <span class="card-image-label"><img src="/images/primer_2.jpg" alt="Exterior Primer"
@@ -1574,7 +1575,7 @@
               </div>
             </div>
             <div class="product-card">
-              <div class="card-top-bar bar-terracotta"></div>
+              <div class="card-top-bar bar-terracotta"></div>  <br/>
               <div class="card-image">
                 <span class="card-brand-chip chip-cycle">Cycle</span>
                 <img src="/images/interior_hero_1.jpg" alt="Product"
